--- a/android/app/src/main/res/layout/activity_disease_stateme.xml
+++ b/android/app/src/main/res/layout/activity_disease_stateme.xml
@@ -176,7 +176,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="100dp"
         android:background="#397AC6"
-        android:hint="Επιλέξτε την ημερομηνια"
+        android:hint=""
         android:padding="15dp"
         android:textColor="#212529 "
         android:textSize="20sp"
@@ -196,7 +196,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="100dp"
         android:background="#397AC6"
-        android:hint="Επιλέξτε την ημερομηνια"
+        android:hint=""
         android:padding="15dp"
         android:textColor="#212529 "
         android:textSize="20sp"
