--- a/Ikesios/app/src/main/res/layout/activity_main.xml
+++ b/Ikesios/app/src/main/res/layout/activity_main.xml
@@ -62,6 +62,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.52" />
 
+
     <TextView
         android:id="@+id/textView3"
         android:layout_width="204dp"
@@ -72,10 +73,10 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.516"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/log_in"
-        app:layout_constraintVertical_bias="0.38" />
-
+        app:layout_constraintVertical_bias="0.409" />
 
     <Button
         android:id="@+id/register"
@@ -100,17 +101,17 @@
 
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.93"
+        app:layout_constraintHorizontal_bias="0.929"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/register"
-        app:layout_constraintVertical_bias="0.97" />
+        app:layout_constraintVertical_bias="0.948" />
 
     <Button
         android:id="@+id/developers"
         style="@style/Widget.MaterialComponents.Button.TextButton"
-        android:layout_width="99dp"
+        android:layout_width="184dp"
         android:layout_height="35dp"
-        android:text="Developers"
+        android:text="ομαδα αναπτυξης"
         android:textSize="10sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/about"
