--- a/Ikesios/app/src/main/res/layout/activity_register.xml
+++ b/Ikesios/app/src/main/res/layout/activity_register.xml
@@ -39,7 +39,7 @@
         android:id="@+id/outlinedTextField"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="186dp"
-        android:layout_height="52dp"
+        android:layout_height="57dp"
         android:layout_marginTop="16dp"
         android:hint="Όνομα"
         app:boxStrokeColor="@color/colorAccent"
@@ -53,6 +53,7 @@
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:inputType="textPersonName"
             android:textSize="15sp" />
 
     </com.google.android.material.textfield.TextInputLayout>
@@ -61,7 +62,7 @@
         android:id="@+id/last_name"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="186dp"
-        android:layout_height="52dp"
+        android:layout_height="57dp"
         android:hint="Επίθετο"
         app:boxStrokeColor="@color/colorAccent"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -82,7 +83,7 @@
         android:id="@+id/email"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="186dp"
-        android:layout_height="52dp"
+        android:layout_height="57dp"
         android:hint="*Email"
         app:boxStrokeColor="@color/colorAccent"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -95,6 +96,7 @@
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:inputType="textPersonName"
             android:textSize="15sp" />
 
     </com.google.android.material.textfield.TextInputLayout>
@@ -103,7 +105,7 @@
         android:id="@+id/phone"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="186dp"
-        android:layout_height="52dp"
+        android:layout_height="57dp"
         android:hint="Τηλέφωνο Επικοινωνίας"
         app:boxStrokeColor="@color/colorAccent"
         app:helperText="(Μόνο για περίπτωση που θέλετε να μπορεί το συστημα να σας εντοπίσει σε περίπτωση ανάγκης)"
@@ -112,8 +114,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.484"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/passwd"
-        app:layout_constraintVertical_bias="0.027">
+        app:layout_constraintTop_toBottomOf="@+id/passwdrepeat"
+        app:layout_constraintVertical_bias="0.051">
 
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
@@ -127,7 +129,7 @@
         android:id="@+id/passwd"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="186dp"
-        android:layout_height="52dp"
+        android:layout_height="57dp"
         android:hint="*Κωδικός Εισόδου"
         app:boxStrokeColor="@color/colorAccent"
         app:endIconMode="password_toggle"
@@ -138,6 +140,31 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/email"
         app:layout_constraintVertical_bias="0.025">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="textPassword"
+            android:textSize="15sp" />
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/passwdrepeat"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        android:layout_width="186dp"
+        android:layout_height="57dp"
+        android:hint="*Επαλήθευση Κωδικού"
+        app:boxStrokeColor="@color/colorAccent"
+        app:endIconMode="password_toggle"
+        app:helperTextTextColor="@color/primaryDark"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.484"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/passwd"
+        app:layout_constraintVertical_bias="0.038">
 
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
